--- a/index.html
+++ b/index.html
@@ -126,10 +126,9 @@
           <a
             class="twitter-link"
             target="_blank"
-            href="https://twitter.com/jonasschmedtman"
-            >Jonas Schmedtmann</a
-          >. Use for learning or your portfolio. Don't use to teach. Don't claim
-          as your own.
+            href="https://www.facebook.com/husnain.syed.58726"
+            >Husnain Syed</a
+          >. Use for learning or your portfolio.
         </p>
       </div>
 
